# translator

./: .gitignore  pyproject.toml
YT CHANNEL/RESEARCH/YOU TUBE RESEARCH/: cowork_brief_travel2chicago.md
YT CHANNEL/RESEARCH/YOU TUBE RESEARCH/Travel2Chicago_Research_2026-04-16/: 00_executive_summary.md  01_niche_map.md  02_benchmark_channels.md  03_keywords.md  04_outlier_teardown.md  05_first_video_recommendation.md  06_cultural_tourism_benchmarks_comments.md
audio-capture-poc/: README.md  settings.gradle.kts
audio-capture-poc/app/: build.gradle.kts
audio-capture-poc/app/src/main/: AndroidManifest.xml
audio-capture-poc/app/src/main/cpp/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  jni_bridge.cpp  ring_buffer.cpp  ring_buffer.h
audio-capture-poc/app/src/main/res/values/: strings.xml  themes.xml
audio-capture-poc/gradle/: libs.versions.toml
audio-hw-check/: README.md  settings.gradle.kts
audio-hw-check/app/: build.gradle.kts
audio-hw-check/app/src/main/: AndroidManifest.xml
audio-hw-check/app/src/main/res/values/: strings.xml  themes.xml
audio-hw-check/gradle/: libs.versions.toml
examples/: capture_demo.py  translate_demo.py
gemma-ast-poc/: PROGRESS.md  README.md  gradlew  gradlew.bat  settings.gradle.kts
gemma-ast-poc/app/: build.gradle.kts  proguard-rules.pro
gemma-ast-poc/app/src/main/: AndroidManifest.xml
gemma-ast-poc/app/src/main/res/values/: strings.xml  themes.xml
gemma-ast-poc/gradle/: libs.versions.toml
gemma-ast-poc/scripts/: copy_companion_files.bat
gemma-pipeline-poc/: PROGRESS.md  README.md  settings.gradle.kts
gemma-pipeline-poc/app/: build.gradle.kts
gemma-pipeline-poc/app/src/main/: AndroidManifest.xml
gemma-pipeline-poc/app/src/main/assets/: kokoro_config.json  kokoro_dict_en_us.txt
gemma-pipeline-poc/app/src/main/cpp/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  jni_bridge.cpp  ring_buffer.cpp  ring_buffer.h
gemma-pipeline-poc/gradle/: libs.versions.toml
src/audio_manager/: __init__.py  audio_chunker.py  buffers.py  capture_stream.py  config.py  device_manager.py  dual_mic.py  events.py  exceptions.py  types.py  vad_processor.py
src/translation_pipeline/: __init__.py  config.py  pipeline.py  player.py  stt.py  translator.py  tts.py
tests/: conftest.py  test_audio_chunker.py  test_buffers.py  test_capture_stream.py  test_config.py  test_device_manager.py  test_dual_mic.py  test_events.py  test_pipeline.py  test_player.py  test_stt.py  test_translator.py  test_tts.py  test_vad_processor.py
vad-chunking-poc/: README.md  settings.gradle.kts
vad-chunking-poc/app/: build.gradle.kts
vad-chunking-poc/app/src/main/: AndroidManifest.xml
vad-chunking-poc/app/src/main/assets/: .gitkeep
vad-chunking-poc/app/src/main/cpp/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  jni_bridge.cpp  ring_buffer.cpp  ring_buffer.h
vad-chunking-poc/gradle/: libs.versions.toml
(+101 files in other folders)
