[project]
name = "audio-manager"
version = "0.1.0"
description = "Real-time bidirectional English-Spanish translator - Audio Manager module"
requires-python = ">=3.12"
dependencies = [
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "janus>=1.0.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_manager"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "hardware: requires physical audio devices (deselect with '-m not hardware')",
]
timeout = 10
