[project]
name = "translator"
version = "0.2.0"
description = "Real-time bidirectional English-Spanish translator"
requires-python = ">=3.12"
dependencies = [
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "janus>=1.0.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "faster-whisper>=1.0.0",
    "argostranslate>=1.9.0",
    "edge-tts>=6.1.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_manager", "src/translation_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "hardware: requires physical audio devices (deselect with '-m not hardware')",
]
timeout = 10
